<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@color/subTitleBackround"
            android:text="@string/temperature"
            style="@style/subtitle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Actual Temperature -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/actual_temperature"
                    android:textAppearance="@android:style/TextAppearance.Material.Large" />

                <TextView
                    android:id="@+id/actualTemperature"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:paddingTop="10dp"
                    style="@style/editableValue" />
            </LinearLayout>

            <!-- Target Temperature -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/target_temperature"
                    android:textAppearance="@android:style/TextAppearance.Material.Large" />

                <TextView
                    android:id="@+id/targetTemperature"
                    android:clickable="true"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:paddingTop="10dp"
                    android:layout_gravity="center"
                    style="@style/editableValue" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
